# AOC

./: .gitignore  README
2015/: Cargo.toml  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  lib.rs
2023/: day_01.nim  day_02.nim  day_03.nim  day_04.nim  day_05.nim  day_06.nim  day_07.nim  day_08.nim  day_09.nim  day_10.nim
2024/: Cargo.toml  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  lib.rs
2025/: Cargo.toml  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  lib.rs
