[package]
name = "AOC_2015"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc"
path = "lib.rs"

[[bin]]
name = "day_01"
path = "day_01.rs"

[[bin]]
name = "day_02"
path = "day_02.rs"

[[bin]]
name = "day_03"
path = "day_03.rs"

[[bin]]
name = "day_04"
path = "day_04.rs"

[dependencies]
md5 = "0.7.0"
