[package]
name = "AOC_2025"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoc"
path = "lib.rs"

[[bin]]
name = "day_01"
path = "day_01.rs"

[[bin]]
name = "day_02"
path = "day_02.rs"

[[bin]]
name = "day_03"
path = "day_03.rs"

[[bin]]
name = "day_04"
path = "day_04.rs"

[[bin]]
name = "day_05"
path = "day_05.rs"

[[bin]]
name = "day_06"
path = "day_06.rs"

[[bin]]
name = "day_07"
path = "day_07.rs"

[[bin]]
name = "day_08"
path = "day_08.rs"

[[bin]]
name = "day_09"
path = "day_09.rs"

[[bin]]
name = "day_10"
path = "day_10.rs"

[[bin]]
name = "day_11"
path = "day_11.rs"

[dependencies.good_lp]
version = "1.14.2"
features = ["minilp"]
default-features = false
